# yandex-direct

./: .gitignore  readme.md  yandex-direct.cabal
src/: YandexDirect.hs
src/YandexDirect/: API.hs  Entity.hs  Lib.hs  Operation.hs  Result.hs
src/YandexDirect/Entity/: Ad.hs  AdExtension.hs  AdGroup.hs  Campaign.hs  Core.hs  Dictionary.hs  Keyword.hs  SitelinksSet.hs
