name:                yandex-direct
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/yandex-direct#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     YandexDirect,
                       YandexDirect.Lib,
                       YandexDirect.Operation,
                       YandexDirect.Entity.Ad,
                       YandexDirect.Entity.AdExtension,
                       YandexDirect.Entity.AdGroup,
                       YandexDirect.Entity.Campaign,
                       YandexDirect.Entity.Core,
                       YandexDirect.Entity.Dictionary
                       YandexDirect.Entity.Keyword,
                       YandexDirect.Entity.SitelinksSet,
                       YandexDirect.Entity,
                       YandexDirect.Result,
                       YandexDirect.API
  build-depends:       aeson,
                       base >= 4.7 && < 5,
                       http-client,
                       mtl,
                       random,
                       servant-client,
                       -- I don't know why haskell-mode requires this instead of simply `servant`.
                       servant-server,
                       text,
                       text-show,
                       transformers
  default-language:    Haskell2010
  ghc-options: -O2 -Wall -funbox-strict-fields

source-repository head
  type:     git
  location: https://github.com/githubuser/yandex-direct
